
<RelativeLayout android:id="@+id/relativeLayout1"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	xmlns:android="http://schemas.android.com/apk/res/android">
	<!-- The Name Box -->
	<TextView android:layout_width="fill_parent" android:id="@+id/browse_peer_label_name"
		android:layout_height="wrap_content" android:text="@string/label_name" />
	<TextView android:enabled="false" android:layout_below="@+id/browse_peer_label_name" android:inputType="textPersonName"
		android:layout_width="fill_parent" android:id="@+id/browse_peer_name"
		android:layout_height="wrap_content" />
	<!-- The Email Box -->
	<TextView android:layout_below="@+id/browse_peer_name" android:id="@+id/browse_peer_label_email"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:text="@string/label_email" />
	<TextView android:enabled="false" android:layout_below="@+id/browse_peer_label_email"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:id="@+id/browse_peer_email" />
	<!-- The Device Box -->
	<TextView android:layout_below="@+id/browse_peer_email"
		android:id="@+id/browse_peer_label_device" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:text="@string/label_device" />
	<TextView android:enabled="false" android:layout_below="@+id/browse_peer_label_device"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:id="@+id/browse_peer_device" />
	<!-- Sharing Repositories -->
	<TextView android:layout_below="@+id/browse_peer_device"
		android:id="@+id/browse_peer_repository_label" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:text="@string/label_repositories" />
	<!-- List header labels -->
	<TextView android:paddingLeft="14px" android:textSize="10sp"
		android:layout_width="wrap_content" android:layout_below="@+id/browse_peer_repository_label"
		android:layout_toRightOf="@+id/browse_peer_public_label" android:text="@string/label_synchronize"
		android:layout_height="wrap_content" android:id="@+id/browse_peer_shared_label" />
	<TextView android:textSize="10sp" android:paddingLeft="10px"
		android:layout_width="wrap_content" android:text="@string/label_repository_name"
		android:layout_height="wrap_content" android:layout_below="@+id/browse_peer_repository_label"
		android:layout_toRightOf="@+id/browse_peer_shared_label" />
	<!-- Checkable list of repositories -->
	<ListView android:layout_below="@+id/browse_peer_shared_label"
		android:id="@+id/browse_peer_repo_list" android:layout_height="wrap_content"
		android:layout_width="fill_parent" android:clickable="true" />
</RelativeLayout>
