
<RelativeLayout android:id="@+id/relativeLayout1"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	xmlns:android="http://schemas.android.com/apk/res/android">

	<!-- Sharing Repositories -->
	<TextView android:layout_below="@+id/browse_remote_button"
		android:id="@+id/add_peer_repository_label" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:text="@string/label_local_repositories" />
	<!-- List header labels -->
	<TextView android:paddingLeft="7px" android:textSize="10sp"
		android:layout_width="wrap_content" android:layout_below="@+id/add_peer_repository_label"
		android:text="@string/label_public" android:layout_height="wrap_content"
		android:id="@+id/add_peer_public_label" />
	<TextView android:paddingLeft="14px" android:textSize="10sp"
		android:layout_width="wrap_content" android:layout_below="@+id/add_peer_repository_label"
		android:layout_toRightOf="@+id/add_peer_public_label" android:text="@string/label_shared"
		android:layout_height="wrap_content" android:id="@+id/add_peer_shared_label" />
	<TextView android:textSize="10sp" android:paddingLeft="10px"
		android:layout_width="wrap_content" android:text="@string/label_repository_name"
		android:layout_height="wrap_content" android:layout_below="@+id/add_peer_repository_label"
		android:layout_toRightOf="@id/add_peer_shared_label" />
	<!-- Checkable list of repositories -->
	<ListView android:layout_below="@id/add_peer_shared_label"
		android:id="@+id/add_peer_repo_list" android:layout_height="wrap_content"
		android:layout_width="fill_parent" android:clickable="true" />

</RelativeLayout>
